backend:added complete crud for performance-service on results and workout, frontend: fixed version axios to prevent update on vulnerable axios, added button control for edit/delte results and workout(only admin) on performance, added also select button to get pass workout
